--- a/biblio.bib
+++ b/biblio.bib
@@ -985,3 +985,13 @@
   year = {1982},
   volume = {82}
 }
+@Article{gmres,
+  title = {{GMRES: A Generalized Minimal Residual Algorithm for Solving
+    Nonsymmetric Linear Systems}},
+  author = {Youcef Saad and Martin H. Schultz},
+  journal = {SIAM Journal on Scientific and Statistical Computing},
+  year = {1986},
+  volume = {7},
+  number = {3},
+  pages = {856-869}
+}
