--- a/conclusions.tex
+++ b/conclusions.tex
@@ -1,9 +1,9 @@
 \section{Conclusions} \label{sec_conc}
-We have adapted the MIP-DSA to PieceWise Linear Discontinuous finite elements
-and proposed a simple way to compute the penalty coefficient which allows the 
+We have adapted the MIP form of DSA to PieceWise Linear Discontinuous finite elements
+and proposed a simple way to compute the penalty coefficient, enabling the 
 use of MIP on arbitrary polygonal meshes. The advantage is the potential 
 reduction of the numbers of unknowns and the possibility to use adaptive mesh 
-refinement without having hanging nodes. We have performed two Fourier analysis 
+refinement without having hanging nodes. We have performed two Fourier analyses 
 of the new MIP-DSA on rectangular cell and shown that MIP is always stable when 
 the scattering is isotropic. On three different examples, we tested MIP on highly
 unstructured meshed composed of different types of cells. We noticed that the
