--- a/mip.tex
+++ b/mip.tex
@@ -2,38 +2,34 @@
 \subsection{Solution Principle}
 In this Section, we recall the MIP technique and extend it to arbitrary
 polygonal/polyhedral cells. As noted earlier, in thick diffusive
-configuration, standard iterative technique can be slowly converging. DSA
-can be employed to accelerate the convergence.
+configurations, standard iterative techniques applied to transport solves 
+can be slowly converging. DSA can be employed to accelerate their convergence.
 The idea behind synthetic acceleration is that the error between the (yet
 unknown) transport solution and the latest iterate can be estimated from a
 computationally less expensive process, yielding a correction term to be added
 to the latest iterate in order to improve the next iterate. In DSA, the
 corrective scalar flux contribution is sought through the following
-diffusion solve, where the source term is due to the difference between
-successive iterates:
+diffusion solve, where the source term is a scattering term due to the
+difference between the previous iterate scalar flux $\Phi^{(\ell)}$ and the
+newest scalar flux, obtained after a transport sweep, $\Phi^{(l+1/2)}$. The
+$(l+1/2)$ index indicates that the next iterate, $\Phi^{(l+1)}$ has not yet
+been fully obtained after the transport sweep, but will be diffusion-corrected:
 \begin{equation}
   \bs{A}\ \delta \Phi = \bs{\Sigma}\(\Phi^{(\ell+1/2)} - \Phi^{(\ell)}\).
 \end{equation}
+where $\bs{A}$ is the DSA matrix.
 Then, the next iterate is obtained as follows:
 \begin{equation}
   \Phi^{(\ell+1)} = \Phi^{(\ell+1/2)}+\delta \Phi.
 \end{equation}
-Similarly, DSA can be obtained to precondition GMRes transport solves. The
-final form of that system is:
-\begin{equation}
-  \(\bs{I} +\bs{A}^{-1} \bs{\Sigma}\)\(\bs{I}-\bs{DL}^{-1}\bs{M\Sigma}\) \Psi
-  = \(\bs{I}+\bs{A}^{-1}\bs{\Sigma}\) \bs{DL}^{-1} S.
-\end{equation}
-Both approaches, SI+DSA or DSA-preconditioned GMRES, require a linear system
-solve involving the diffusion matrix $\bs{A}$. Ideally, such a matrix should
-be SPD (such that efficient techniques can be employed in its linear solve)
-and easy to form (even on arbitrary grids).
+Ideally, $\bs{A}$ should be SPD (such that efficient iterative techniques can 
+be employed in its linear solve) and easy to form (even on arbitrary grids).
 \subsection{Modified Interior Penalty DSA}
-Now that the PWLD finite elements have been introduced and the SI+DSA method is
-known, we can define the Modified Interior Penalty DSA \cite{mip}. This DSA 
-scheme uses discontinuous Galerkin finite elements for the spatial discretization 
-and has been shown to be always stable for isotropic scattering on triangular
-cells. It is based on the Interior Penalty scheme (IP). This method applies
+Now, we can discuss the Modified Interior Penalty as a DSA scheme \cite{mip}. 
+This DSA scheme employs the same discontinuous finite elements used in the 
+transport discretization for the discretization of the diffusion operator. 
+MIP-DSA has been shown to be always stable for isotropic scattering on triangular 
+cells. It is based on Interior Penalty scheme (IP). This method applies
 directly the IP technique to the following diffusion update equation:
 \begin{align}
   -\bn \mathrm{D} \bn \phi + \Sigma_a \phi &= Q_0 &\textrm{ for }\br \in
@@ -45,13 +41,13 @@ directly the IP technique to the following diffusion update equation:
 \end{align}
 where $\mathrm{D}$ is the diffusion coefficient, $\partial \mc{D}^d$ is the
 boundary of the domain with Dirichlet condition, $\partial \mc{D}^r$ is the
-boundary of the domain with reflective condition, $Q_0=\Sigma_s \delta
-\Phi^{(\ell)}$, $J^{inc} = \sum_{\bo_m\cdot\bs{n}_b >0} w_m |\bo_m \cdot
-\bs{n}_b| \delta \psi_m$, and $\partial_n = \bs{n}_e\cdot \bn$ where
+boundary of the domain with reflective condition, $Q_0=\Sigma_s
+\(\Phi^{(\ell+1/2)}-\Phi^{(\ell)}\)$, $J^{inc} = \sum_{\bo_d\cdot\bs{n}_b >0} w_d 
+|\bo_d \cdot \bs{n}_b| \delta \psi_d$, and $\partial_n = \bs{n}_e\cdot \bn$ where
 $\bs{n}_e$ is the normal unit vector associated with a given edge $e$ (on the
 boundary $\bs{n}_e = \bs{n}_b$). The only difference between IP and MIP is the
 penalty factor $\kappa_e^{IP}$ used for IP is replaced by a new penalty factor
-$\kappa_E^{MIP}$. Therefore, the weak form of MIP is given by:
+$\kappa_e^{MIP}$. Therefore, the weak form of MIP is given by:
 \begin{equation}
 b(\phi,\phi^*) = l(\phi^*)
 \label{mip}
@@ -72,7 +68,7 @@ b(\phi,\phi^*) =& \(\Sigma_a \phi,\phi^*\)_{\mc{D}}+
 \end{split}
 \end{equation}
 \begin{equation}
-l(\phi^*) = (Q_0,\phi^*)_{\mc{D}}+ (J^{inc},\phi^*)_{\partial \mc{D}^r}
+l(\phi^*) = (Q_0,\phi^*)_{\mc{D}}+ (J^{inc},\phi^*)_{\partial \mc{D}^r},
 \label{mip_l}
 \end{equation}
 where $(f,g)_{\mc{D}} = \sum_{K\in \mathbb{T}_h} \(f,g\)_K$, 
@@ -80,9 +76,12 @@ $(f,g)_K = \int_K fg\ d\br$, $(f,g)_{E_h^i}=\sum_{e\in E_h^i}(f,g)_e$,
 $(f,g)_e = \int_e fg\ ds$,
  $\mathbb{T}_h$ is the mesh used to discretize the domain
 $\mc{D}$ into nonoverlapping elements $K$, $E_h^i$ is the set of interior
-edges, $\Sigma_a$ is the absorption cross section,
-$\llb\phi\rrb = \phi^+ - \phi^-$ is the jump of $\phi$ at the interface between 
-two elements, $\ldb\phi\rdb = \frac{\phi^+ + \phi^-}{2}$ is the mean of $\phi$ 
+edges, $\phi$ and $\phi^* \in W_{\mc{D}}^h$, $W_{\mc{D}}^h=\{P \in
+L^2(\mc{D}); P|_{K}\in V_p(K), \forall K \in \mathbb{T}_h\}$, where $V_p(K)$
+is the space of polynomials of degree up to $p$ on element $K$, $\Sigma_a$ is 
+the absorption cross section, $\llb\phi\rrb = \phi^+ - \phi^-$ is the jump of 
+$\phi$ at the interface between two elements, 
+$\ldb\phi\rdb = \frac{\phi^+ + \phi^-}{2}$ is the mean of $\phi$ 
 at the interface between two elements, 
 $\phi^{\pm}=\lim_{s\rightarrow 0^{\pm}}\phi(\bs{r}+s\bs{n}_e)$, and
 $\kappa_e^{MIP} = \max\(\kappa_e^{IP},\frac{1}{4}\)$
@@ -101,21 +100,27 @@ e\in E_h^i\\
 where $c(p)$ is given by $c(p) = 2p (p+1)$, $p$ is the polynomial order ($p=1$
 in this paper) and $h_{\bot}$ is the length of the cell in the direction
 orthogonal to the edge $e$. MIP yields only a correction for the scalar flux
-but by assuming that the angular dependence satisfies a diffusion expansion.
+but by assuming that the angular dependence satisfies a diffusion expansion,
+the angular correction can be computed using:
+\begin{equation}
+  \varepsilon_d = \frac{1}{4\pi}(\phi-3\mathrm{D}\bn\phi\cdot \bo_d)
+\end{equation}
+This correction can be used when some of the boundary conditions are periodic
+or reflective.
 
-If PWLD finite elements are used instead of LD finite elements, the weak form 
-of MIP is not modified. For general polygons, there is no 
-simple way to compute $h_{\bot}$. To simplify this, we 
+When PWLD finite elements are used instead of LD finite elements, the weak form 
+of MIP remains unchanged. But for general polygons, there is no 
+simple way to compute $h_{\bot}$. To estimate $h_{\bot}$, we 
 assume that the polygonal cells are not too far from being regular polygonal 
-cells. In such cases, if the cell has an even number of edges, the orthogonal 
-length equals two times the apothem, i.e. two times the segment between the 
+cells. In such case, if the cell has an even number of edges, the orthogonal 
+length equals two times the apothem, i.e., two times the segment between the 
 midpoint of a side of the polygon and the center of this polygon 
 $\(\textrm{apothem}=2\times \frac{\textrm{area}}{\textrm{perimeter}}\)$. If 
 the cell has an odd number of edges, the orthogonal length is given by the 
-apothem plus the circumradius, i.e. the radius of the circle circumscribed to 
-the polygon $\(\textrm{circumradius}=\sqrt{\frac{2\times \textrm{area}}{V
-\sin\(\frac{2\pi}{V}\)}}\)$. Therefore, $h_{\bot}$ is given in
-\Cref{table_h_bot}:
+apothem plus the circumradius, i.e., the radius of the circle circumscribed to 
+the polygon $\(\textrm{circumradius}=\sqrt{\frac{2\times \textrm{area}}{N_V
+\sin\(\frac{2\pi}{N_V}\)}}\)$. Therefore, $h_{\bot}$ is given in
+\Cref{table_h_bot}.
 \begin{table}[H]
   \begin{center}
     \caption{Orthogonal length of the cell for different cells.}
@@ -127,7 +132,7 @@ the polygon $\(\textrm{circumradius}=\sqrt{\frac{2\times \textrm{area}}{V
 $\frac{\textrm{area}}{L_e}$ & $4\times
 \frac{\textrm{area}}{\textrm{perimeter}}$ & $2 \times
       \frac{\textrm{area}}{\textrm{perimeter}}+\sqrt{\frac{2\times
-      \textrm{area}}{V\sin\(\frac{2\pi}{V}\)}}$\\
+      \textrm{area}}{N_V\sin\(\frac{2\pi}{N_V}\)}}$\\
       \hline
     \end{tabular}
     \label{table_h_bot}
