improved abstract and fixed typos

--- a/abstract.tex
+++ b/abstract.tex
@@ -1,20 +1,21 @@
 \begin{abstract}
-  The Modified Interior Penalty (MIP) Diffusion Synthetic Acceleration (DSA)
-  is adapted to the PieceWise Linear Discontinuous (PWLD) finite elements.
-  This provides a DSA preconditioner for arbitrary polygonal meshes. Arbitrary
-  polygonal meshes can be used to model complex objects and to decrease the
-  number of unknowns or to employ
-  adaptive mesh refinement without the need to treat so-called ``hanging
-  nodes''. Fourier analyses are 
-  performed on the new MIP formulation and it is shown that this scheme is
-  always stable with isotropic scattering, including high-aspect ratio cells.
-  Numerical results are presented for three different unstructured meshes and 
-  is shown to be 
-  efficient on all these meshes. The system of equations produced by the MIP 
-  is symmetric and positive definite and it is typical solved using
-  Conjugate Gradient (CG) preconditioned with a Symmetric Gauss-Seidel
-  scheme. In this research, we also compare CG preconditioned with 
-  Symmetric Gauss-Seidel and CG preconditioned by Algebraic MultiGrid
-  methods (AMG). AMG preconditioning is shown to be much more effective and
-  efficient than SGS preconditioning.
+  The Modified Interior Penalty (MIP) Diffusion Synthetic Acceleration (DSA) technique
+  is extended to the Piece-Wise Linear Discontinuous (PWLD) finite elements.
+  This provides a DSA preconditioner for arbitrary 2D polygonal/3D polyhderal meshes. Arbitrary
+  polygonal/polyhedral grids are used to model complex objects while decreasing the
+  number of unknowns. Such grids can also be advantageously employed within an 
+  adaptive mesh refinement process without the need to treat so-called ``hanging
+  nodes'' between cells of different refinement depth. 
+  The system of equations obtained by the MIP technique 
+  is symmetric and positive definite. This linear system is typically solved using
+  Conjugate Gradient (CG) preconditioned with a \textcolor{red}{Symmetric Gauss-Seidel}
+  (SGS) scheme. In this research, we also compare SGS-preconditioned CG with 
+  GG preconditioned using an Algebraic MultiGrid   methods (AMG). 
+  Fourier analyses are 
+  performed for the PWLD MIP formulation and we show that this scheme is
+  always stable and effective at reducing the spectral radius for iterative transport
+  solves, including for grids with high-aspect ratio cells.
+  Numerical results are presented for three different unstructured meshes. 
+  AMG preconditioning for the MIP system is shown to be significantly more effective 
+  than SGS preconditioning.
 \end{abstract}
